# libfirm

./: .cdtproject  .cvsignore  .gitattributes  .gitignore  .gitlab-ci.yml  .project  BUGS  CMakeLists.txt  Changes  Doxyfile  INSTALL  MakeRules.in  MakeTargets  Makefile  Makefile.am  Makefile.in  NEWS  NEWS.md  README  README.IPD  README.md  RELNOTES  TODO  acconfig.h  acinclude.m4  aclocal.m4  appveyor.yml  brute_force.c  brute_force.h  bucket.c  bucket.h  bucket_t.h  config.guess  config.h.in  config.mak.example  config.sub  configure  configure.ac  configure.in  filter.awk  (+34 more)
include/libfirm/: Makefile.am  Makefile.in  absgraph.h  analyze_irg_args.h  archop.h  be.h  begin.h  call_sites.h  callgraph.h  cdep.h  cgana.h  compound_path.h  compute_loop_info.h  create_filelist.sh  dbginfo.h  dfs.h  end.h  execfreq.h  execution_frequency.h  field_temperature.h  firm.h  firm_common.h  firm_types.h  firm_ycomp.h  firmstat.h  height.h  heights.h  ident.h  important_args.h  interval_analysis.h  irarch.h  ircgcons.h  ircgopt.h  ircons.h  irconsconfirm.h  irdom.h  irdump.h  irdump_grgen.h  iredgekinds.h  iredges.h  (+45 more)
ir/: .dummy.in  Makefile  Makefile.am  Makefile.in  create_filelist.sh  test.c
ir/adt/: .cvsignore  Makefile  Makefile.in  align.h  apqueue.c  apqueue.h  array.c  array.h  array_t.h  arrayset.c  bipartite.c  bipartite.h  bitfiddle.h  bitset.c  bitset.h  bitset_ia32.h  bitset_std.h  compiler.h  cookies.h  cpset.c  cpset.h  debug.c  debug.h  deq.c  deq.h  eset.c  eset.h  fourcc.h  gaussjordan.c  gaussjordan.h  gaussseidel.c  hashptr.h  hashset.c  hashset.c.inl  hashset.h  host.h  hungarian.c  hungarian.h  impl.h  iterator.c  (+26 more)
ir/ana/: Makefile.in  absgraph.c  absgraph.h  analyze_irg_args.c  analyze_irg_args.h  bitwidth.c  bitwidth.h  call_sites.c  callgraph.c  callgraph.h  cdep.c  cdep.h  cdep_t.h  cgana.c  cgana.h  compute_loop_info.c  compute_loop_info.h  constbits.c  constbits.h  dca.c  dca.h  dfs.c  dfs.h  dfs_t.h  dijkstra.c  dijkstra.h  domfront.c  ecg.c  ecg.h  execfreq.c  execfreq.h  execfreq_t.h  execution_frequency.c  execution_frequency.h  field_temperature.c  field_temperature.h  fp-vrp.c  fp-vrp.h  height.c  height.h  (+60 more)
ir/ana2/: Makefile.in  ecg.c  ecg.h  gnu_ext.h  irmemwalk.c  irmemwalk.h  lset.c  lset.h  pto.c  pto.h  pto_comp.c  pto_comp.h  pto_ctx.c  pto_ctx.h  pto_debug.c  pto_debug.h  pto_init.c  pto_init.h  pto_mod.c  pto_mod.h  pto_name.c  pto_name.h  pto_util.c  pto_util.h  qset.c  qset.h  timing.c  timing.h  typalise.c  typalise.h
ir/arch/: Makefile.in  archop.c  archop.h  modeconv.c  modeconv.h
ir/be/: .cvsignore  .gitignore  Makefile.in  be.h  be2addr.c  be2addr.h  be_dbgout.h  be_dbgout_t.h  be_t.h  be_types.h  beabi.c  beabi.h  beabi_t.h  beabihelper.c  beabihelper.h  bearch.c  bearch.h  bearch_firm.c  bearch_firm.h  bearch_obj.def  bearch_operand_types.def  bearch_t.h  bearchs.h  beasm.c  beasm.h  beasm_asm_gnu.c  beasm_asm_gnu.h  beasm_dump_globals.c  beasm_dump_globals.h  beasm_types.h  beblocksched.c  beblocksched.h  bechordal.c  bechordal.h  bechordal_common.c  bechordal_common.h  bechordal_draw.c  bechordal_draw.h  bechordal_main.c  bechordal_t.h  (+215 more)
ir/common/: Makefile  Makefile.in  bool.h  common.c  common.h  common_t.h  debug.c  debug.h  debugger.c  error.c  error.h  firm.c  firm.h  firm_common.c  firm_common.h  firm_common_t.h  firm_types.h  firmwalk.c  firmwalk.h  irtools.c  irtools.h  misc.h  old_fctnames.h  panic.c  panic.h  statistics.c  statistics.h  strerror.c  survive_dce.c  survive_dce.h  timing.c  tune.h  version.h  xfprintf.c  xgprintf.c  xoprintf.c  xp_help.h  xprintf.h
ir/config/: .cvsignore  Makefile.in
ir/debug/: Makefile  Makefile.in  dbginfo.c  dbginfo.h  dbginfo_t.h  debinfo.c  debinfo.h  debug.h  debugger.c  debugger.h  firm_ycomp.c  firm_ycomp.h  seqnumbers.c  seqnumbers.h
ir/ident/: Makefile  Makefile.in  ident.c  ident.h  ident_t.h  mangle.c  xx_ident.h
ir/ir/: .gitignore  Makefile  Makefile.in  dbginfo.c  dbginfo_t.h  instrument.c  instrument.h  ir_spec.pl  irarch.c  irarch.h  irarch_t.h  irargs.c  irargs_t.h  irbitset.h  ircgcons.c  ircgcons.h  ircgopt.c  ircgopt.h  ircomplib.c  ircons.c  ircons.h  ircons.h.flc  ircons_t.h  irdump.c  irdump.h  irdump_grgen.c  irdump_grgen.h  irdump_t.h  irdumptxt.c  iredgekinds.h  iredges.c  iredges.h  iredges_t.h  iredgeset.h  irflag.c  irflag.h  irflag_t.def  irflag_t.h  irgmod.c  irgmod.h  (+79 more)
ir/kaps/: brute_force.c  brute_force.h  bucket.c  bucket.h  bucket_t.h  heuristical.c  heuristical.h  heuristical_co.c  heuristical_co.h  heuristical_co_ld.c  heuristical_co_ld.h  html_dumper.c  html_dumper.h  kaps.c  kaps.h  matrix.c  matrix.h  matrix_t.h  optimal.c  optimal.h  pbqp_edge.c  pbqp_edge.h  pbqp_edge_t.h  pbqp_node.c  pbqp_node.h  pbqp_node_t.h  pbqp_t.h  vector.c  vector.h  vector_t.h
ir/libcore/: do_bisonflex.sh  lc_appendable.c  lc_appendable.h  lc_common_t.h  lc_config.h  lc_config_lexer.c  lc_config_lexer.l  lc_config_parser.c  lc_config_parser.h  lc_config_parser.y  lc_defines.h  lc_opts.c  lc_opts.h  lc_opts_enum.c  lc_opts_enum.h  lc_opts_t.h  lc_parser_t.h  lc_printf.c  lc_printf.h  lc_printf_arg_types.def  lc_type.c
ir/lower/: Makefile.in  lower_alloc.c  lower_alloc.h  lower_builtins.c  lower_builtins.h  lower_calls.c  lower_calls.h  lower_closure.c  lower_copyb.c  lower_dw.c  lower_dw.h  lower_hl.c  lower_hl.h  lower_intrinsics.c  lower_intrinsics.h  lower_mode_b.c  lower_mode_b.h  lower_mux.c  lower_softfloat.c  lower_softfloat.h  lower_switch.c
ir/lpp/: lpp.c  lpp.h  lpp_cmd.def  lpp_comm.c  lpp_comm.h  lpp_cplex.c  lpp_cplex.h  lpp_gurobi.c  lpp_gurobi.h  lpp_net.c  lpp_net.h  lpp_remote.c  lpp_remote.h  lpp_server.c  lpp_server.h  lpp_set_dbg.c  lpp_show.c  lpp_solvers.c  lpp_solvers.h  lpp_t.h  lpp_test.c  mps.c  mps.h  sp_matrix.c  sp_matrix.h
ir/net/: Makefile.in  firmnet.c  firmnet.h  firmnet_t.h
ir/obstack/: README  obstack.c  obstack_printf.c
ir/obstack_win/: obstack.c  obstack.h  obstack_printf.c
ir/opt/: Makefile.in  boolopt.c  ces_agu_adv_row.c  ces_agu_adv_row.h  ces_agu_emulator.c  ces_agu_emulator.h  ces_agu_simple_row.c  ces_deadcode.c  (+122 more)
(+1624 files in other folders)
